--- a/app/views/pirates/create.js.erb
+++ b/app/views/pirates/create.js.erb
@@ -1,1 +1,1 @@
-$(‘#pirates’).prepend(“”<%=j render :partial => ‘shared/pirate’, :locals => {:p => @pirate} %>”);
+$(‘#pirates’).prepend(”<%=j render :partial => ‘shared/pirate’, :locals => {:p => @pirate} %>”);
